Day4/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "www.tektutor.org"
    http:
      paths:
        - pathType: Prefix
          path: /nginx
          backend:
            service:
              name: nginx
              port:
                number: 80
        - pathType: Prefix
          path: /hello
          backend:
            service:
              name: hello 
              port:
                number: 8080
